--- a/indexx.html
+++ b/indexx.html
@@ -7,8 +7,8 @@
 	<link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.css">
 	<!-- link to firebase -->
 	<script src="https://www.gstatic.com/firebasejs/3.6.6/firebase.js"></script>
-
 </head>
+
 <body>
 
 <div class = "container"> 
@@ -20,57 +20,58 @@
 <br>
 <br>
 
-<table class="row highlight col-lg-6">
-       <thead> 
-       <div class = "titleOne"> 
-	       <h5 class="current">Current Train Schedule</h5>
-       </div>
-         <tr>
-             <th data-field="name">Train Name</th>
-             <th data-field="place">Destination</th>
-             <th data-field="time">Frequency (min)</th>
-             <th data-field="when">Next Arrival</th>
-             <th data-field="where">Minutes Away</th>
-         </tr>
-       </thead>
-</table>
+<section class="container">
+	<table class="row highlight">	
+		<div class = "col-lg-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h5 class="titleTwo">Current Train Schedule</h5>
+				</div>
+				<div class="panel-body">
+					<tr>
+					    <th data-field="name">Train Name</th>
+					    <th data-field="place">Destination</th>
+					    <th data-field="when">First Train Time</th>
+					    <th data-field="time">Frequency (min)</th>
+					</tr>
+				</div>
+			</div>		
+		</div>
+	</table>	
+</section>
 
-<div class="row">	
-	<div class = "col-lg-6">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h5 class="titleTwo">Add a Train</h5>
-			</div>
-			<div class="panel-body">
-				<form role="form">
-					<div class="form-group">
-						<label for="text">Train Name: </label>
-						<input type="text" class="form-control" id="nameInput">
-					</div>
-					<div class="form-group">
-						<label for="text">Destination: </label>
-						<input type="text" class="form-control" id="destinationInput">
-					</div>
-					<div class="form-group">
-						<label for="text">Frequency (min): </label>
-						<input type="text" class="form-control" id="freqInput">
-					</div>
-					<div class="form-group">
-						<label for="text">Next Arrival: </label>
-						<input type="text" class="form-control" id="nextInput">
-					</div>	
-					<div class="form-group">
-						<label for="text">Minutes Away: </label>
-						<input type="text" class="form-control" id="minutesInput">
-					</div>
-			
-					<button type="submit" class="btn btn-default" id="userSubmit">Submit</button>
-			</form>
-			</div>
+<section class = "container">
+	<div class="row highlight">	
+		<div class = "col-lg-6">
+			<div class="panel panel-default">
+				<div class="panel-heading">
+					<h5 class="titleTwo">Add a Train</h5>
+				</div>
+				<div class="panel-body">
+					<form role="form">
+						<div class="form-group">
+							<label for="trainName">Train Name: </label>
+							<input type="text" class="form-control" id="nameInput">
+						</div>
+						<div class="form-group">
+							<label for="destination">Destination: </label>
+							<input type="text" class="form-control" id="destinationInput">
+						</div>
+						<div class="form-group">
+							<label for="firstTrain">First Train Time: </label>
+							<input type="text" class="form-control" id="firstInput">
+						</div>
+						<div class="form-group">
+							<label for="frequency">Frequency (min): </label>
+							<input type="text" class="form-control" id="freqInput">
+						</div>
+						<button type="submit" class="btn btn-default" id="userSubmit">Submit</button>
+					</form>
+				</div>
+			</div>		
+		</div>
 	</div>	
-</div>
-
-
+</section>
 
 <script>
   // Initialize Firebase
@@ -82,6 +83,7 @@
     messagingSenderId: "682983660240"
   };
   firebase.initializeApp(config);
+
 </script>
 
 <!-- link to jquery -->
