--- a/indexx.html
+++ b/indexx.html
@@ -13,7 +13,7 @@
 
 <div class = "container"> 
 	<div class = "jumbotron center"> 
-	     <h1 class="green lighten-4"><a href="#" class="brand-logo center">Train Schedule</a></h1>
+	     <h1 class="green lighten-4"><a href="#" class="brand-logo center black-text darken-4">Train Schedule</a></h1>
 	</div>
 </div>
 
@@ -27,7 +27,7 @@
 				<div class="panel-heading">
 					<h5 class="titleTwo">Current Train Schedule</h5>
 				</div>
-				<div class="panel-body">
+				<div class="panel-heading">
 					<tr>
 					    <th data-field="name">Train Name</th>
 					    <th data-field="place">Destination</th>
